src/components/Toast/Toast.css
/* Add dark mode styles */
.toast__viewport {
  --viewport-padding: 25px;
  padding: var(--viewport-padding);
  width: 390px;
  max-width: 100vw;
  z-index: 2147483647;
  outline: none;

  @apply fixed right-0 bottom-0 flex flex-col gap-2;
}

.toast {
  padding: 10px 5px 10px 22px;
  grid-template-areas: 'title action' 'description action';
  grid-template-columns: auto max-content;

  @apply relative grid gap-x-4 items-center border border-solid rounded-md border-white bg-white shadow-sm;
}
.toast::before {
  @apply content-[''] block absolute top-1 bottom-1 left-1 w-1 rounded bg-transparent;
}
.toast[data-state='open'] {
  animation: slideIn 150ms cubic-bezier(0.16, 1, 0.3, 1);
}
.toast[data-state='closed'] {
  animation: hide 100ms ease-in;
}
.toast[data-swipe='move'] {
  transform: translateX(var(--radix-toast-swipe-move-x));
}
.toast[data-swipe='cancel'] {
  transform: translateX(0);
  transition: transform 200ms ease-out;
}
.toast[data-swipe='end'] {
  animation: swipeOut 100ms ease-out;
}
.toast--info {
  @apply border-accent-500 bg-accent-50;
}
.toast--info::before {
  @apply bg-accent-500;
}
.toast--success {
  @apply border-success-500 bg-success-50;
}
.toast--success::before {
  @apply bg-success-500;
}
.toast--error {
  @apply border-danger-500 bg-danger-50;
}
.toast--error::before {
  @apply bg-danger-400;
}

@keyframes hide {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@keyframes slideIn {
  from {
    transform: translateX(calc(100% + var(--viewport-padding)));
  }
  to {
    transform: translateX(0);
  }
}

@keyframes swipeOut {
  from {
    transform: translateX(var(--radix-toast-swipe-end-x));
  }
  to {
    transform: translateX(calc(100% + var(--viewport-padding)));
  }
}

.toast__title {
  grid-area: title;

  @apply font-bold mb-1;
}
.toast--info .toast__title {
  @apply text-accent-600;
}
.toast--success .toast__title {
  @apply text-success-600;
}
.toast--error .toast__title {
  @apply text-danger-600;
}

.toast__description {
  grid-area: description;

  @apply m-0 text-sm leading-snug;
}

.toast__action {
  grid-area: action;
}

